Feat: small improvements

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,6 +1,5 @@
-preload = ~/Downloads/1327263.png
+preload = ~/Downloads/new.jpeg
 
-wallpaper = eDP-1,~/Downloads/1327263.png
-wallpaper = HDMI-A-2,~/Documents/wallpapers/flowers.png
+wallpaper = eDP-1,~/Downloads/new.jpeg
 
 ipc = off
