--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,7 +13,7 @@ monitor=eDP-1, 1366x768, 0x1080, 1
 monitor=,highres, 0x0, 1
 
 # Execute at launch
-exec-once = hyprpaper & waybar
+exec-once = hyprpaper & waybar & eww
 exec-once = $HOME/.config/hypr/scripts/sleep.sh
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # Source a file (multi-file configs)
@@ -131,7 +131,7 @@ bind = $mainMod, Q, exec, kitty
 bind = $mainMod, W, exec, chromium
 bind = $mainMod, D, exec, wofi
 bind = $mainMod, B, exec, pkill -USR1 gammastep || gammastep
-
+bind = $mainMod, E, exec, $HOME/.config/eww/dashboard/launch_dashboard
 bind = $mainMod, F, fullscreen
 bind = $mainMod, C, killactive,
 bind = $mainMod SHIFT, E, exit,
