--- a/waybar/config
+++ b/waybar/config
@@ -9,17 +9,16 @@
 		"keyboard-state",
 	],
 	"modules-center": [
-		"clock#3",
+        "tray",
+        "clock#3",
 		"custom/weather",
 	],
 	"modules-right": [
 		"pulseaudio",
-		"disk",
 		"cpu",
 		"memory",
-		"temperature",
 		"network",
-        "tray"
+        "custom/wlogout"
 	],
  "custom/clipboard": {
   "format": "{}   ",
@@ -27,27 +26,39 @@
   "on-click": "cliphist list | wofi -d -p | cliphist decode | wl-copy",
 	"on-click-right": "cliphist wipe",
   "interval": 5},
-	"sway/workspaces": {
-		"disable-scroll": true,
-		"format": "{icon}",
-		"format-icons": {
-		   "2": "  2",
-			 "1": "  1",
-			 "3": "  3",
-			 "4":"  4",
-			 "urgent": "  atention!",
-			 }
-	},
 	"tray": {
 		"icon-size": 15
 	},
+    "custom/wlogout": {
+        "format": " ⏻  ",
+        "on-click": "wlogout",
+        "tooltip": false
+    },
+    "hyprland/workspaces": {
+        "format": "{icon}",
+        "format-icons": {
+            "1": "I",
+            "2": "II",
+            "3": "III",
+            "4": "IV",
+            "5": "V",
+            "6": "VI",
+            "7": "VII",
+            "8": "VIII",
+            "9": "IX",
+            "10": "X"
+        },
+        "on-click": "activate",
+        "sort-by-number": true,
+        "active-only": false
+    },
 	"clock#3": {
 		"format": "{:%a %d-%m | %H:%M}",
 		"tooltip": true,
   	"tooltip-format": "<tt><big>{calendar}</big>{}</tt>"
 	},
 	"pulseaudio": {
-		"format": "{icon}  {volume:2}% {format_source} ",
+		"format": " {icon}  {volume:2}% {format_source} ",
 		"format-bluetooth": "{icon}  {volume}% ",
 		"format-muted": "MUTE",
 		"format-source": " {volume}%",
@@ -60,19 +71,18 @@
 			]
 		},
 		"scroll-step": 5,
-		"on-click": "pamixer -t",
-		"on-click-right": "pavucontrol"
+		"on-click": "pamixer -t","on-click-right": "pavucontrol"
 	},
 	"memory": {
 		"interval": 5,
-		"format": " {}% |"
+		"format": "  {}% "
 	},
 	"cpu": {
 		"interval": 5,
-		"format": "💻 {usage:2}% |"
+		"format": " 💻 {usage:2}% "
 	},
   "network": {
-	"format-wifi": "({signalStrength}%)   ",
+	"format-wifi": " ({signalStrength}%)   ",
 	"format-ethernet": " 📶 ",
 	"tooltip-format": "{gwaddr}",
 	"format-linked": "{ifname} (No IP) ",
@@ -85,25 +95,5 @@
     "interval": 3600,
     "exec": "wttrbar",
     "return-type": "json"
-},
-	"temperature": {
-	"thermal-zone": 2,
-	"critical-threshold": 80,
-	"format-critical": "{icon}{temperatureC}°C",
-	"format": "{icon} {temperatureC}°C ",
-	"format-icons": ["", "", ""]},
-	"disk": {
-		"interval": 5,
-		"format": "💾 {percentage_used:2}% |",
-		"path": "/"
-	},
-	"keyboard-state": {
-	"numlock": true,
-	"capslock": true,
-	"format": "{name} {icon}",
-	"format-icons": {
-		"locked": "",
-		"unlocked": ""
-	}
- }
+    },
 }
