Hyprland & other configs

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -77,8 +77,8 @@ decoration {
     }
 
     drop_shadow = true
-    shadow_range = 25
-    shadow_render_power = 3
+    shadow_range = 40
+    shadow_render_power = 5
     col.shadow = rgba(1a1a1aee)
 }
 
@@ -130,8 +130,10 @@ $mainMod = SUPER
 bind = $mainMod, Q, exec, kitty
 bind = $mainMod, W, exec, chromium
 bind = $mainMod, D, exec, wofi
+bind = $mainMod, N, exec, nvim # idk why
 bind = $mainMod, B, exec, pkill -USR1 gammastep || gammastep
 bind = $mainMod, E, exec, $HOME/.config/eww/dashboard/launch_dashboard
+bind = $mainMod, S, exec, wlogout
 bind = $mainMod, F, fullscreen
 bind = $mainMod, C, killactive,
 bind = $mainMod SHIFT, E, exit,
