--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = ~/Downloads/new.jpeg
+preload = ~/Downloads/wallpaper.jpg
 
-wallpaper = eDP-1,~/Downloads/new.jpeg
+wallpaper = eDP-1,~/Downloads/wallpaper.jpg
 
 ipc = off
